Don't make URLClassLoader modifiable
Doing so triggers a warning under Java 9, so this removes doing so from
the defaults.

Related to #7